test/overlay/nut/nut-6/allow-namespace-nut-5.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-namespace-nut-5
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            app.kubernetes.io/instance: nut-5
