test/overlay/nut/nut-6/kustomization.yml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: nut-6

resources:
  - ../../../base
  - allow-namespace-nut-4.yml
  - allow-namespace-nut-5.yml
